fixed calendar whitespace on mobile... maybe

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,5 +14,4 @@ body {
 
 .content-body {
   padding-bottom: 40px;
-  justify-content: space-between;
 }
