--- a/src/styles/sassets/schedule.scss
+++ b/src/styles/sassets/schedule.scss
@@ -13,16 +13,12 @@
     margin-top: 10px;
     max-height: 24px;
 
-    @include smartphone-portrait {
-        max-width: 300px;
-    }
-
     .content-header {
         width: 80%;
         display: flex;
         flex-direction: row;
         .label {
-            min-width: 30%;
+            min-width: 25%;
             text-align: center;
             border-radius: 3px;
             font-size: 12px;
@@ -47,6 +43,16 @@
         display: flex;
         flex-direction: row;
         justify-content: space-around;
+    }
+
+    @include smartphone-portrait {
+        max-width: 300px;
+        .content-header {
+            width: 70%;
+        }
+        .links {
+            min-width: 30%;
+        }
     }
 }
 
@@ -90,5 +96,6 @@ span {
 
 .calendar-container {
     @include shadow-card;
+    width: 345px;
     padding: 30px;
 }
